<resources>
    <string name="app_name">DesafiosDia1</string>

    <string name="hello_world">Hello world!</string>
    <string name="bem_vindo">Sejam bem vindos!</string>
    <string name="descricao">Workshop Android</string>
    <string name="andre">André Felipe</string>
    <string name="michel">Michel Arruda</string>
    <string name="jacson">Jacson Hwang</string>

    <string name="fiveMin">5 minutos</string>
    <string name="tenMin">10 minutos</string>
    <string name="fithteenMin">15 minutos</string>
    <string name="twentyMin">20 minutos</string>
    <string name="twentyFiveMin">25 minutos</string>
    <string name="thirtyMin">30 minutos</string>

    <string name="terminou">Terminou!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_desafio1">Desafio1</string>
    <string name="title_activity_desafio2">Desafio2</string>
    <string name="title_activity_desafio3">Desafio3</string>
    <string name="title_activity_desafio4">Desafio4</string>
    <string name="title_activity_desafio5">Desafio5</string>
    <string name="title_activity_desafio6">Desafio6</string>
    <string name="title_activity_desafio7">Desafio7</string>
    <string name="title_activity_desafio8">Desafio8</string>
    <string name="title_activity_cronomentro">Cronômetro</string>
    <string name="title_activity_bem_vindos">Bem Vindos!</string>

    <string name="title_activity_desafio7_activity2">Desafio7Activity2</string>
    <string name="title_activity_desafio8_Login">Desafio8 - Login</string>
    <string name="title_activity_desafio8_cadastrar">Desafio8 - Cadastrar</string>
    <string name="title_activity_desafio8_exibir">Desafio8 - Exibir</string>
    <string name="title_activity_desafio8_alterar">Desafio8 - Alterar</string>

    <string name="TextView">TextView</string>
    <string name="EditText">EditText</string>
    <string name="Button">Button</string>
    <string name="ImageView">ImageView</string>
    <string name="avancar">Avançar</string>

    <string name="logar">Logar</string>
    <string name="cadatrar">Cadastrar</string>
    <string name="alterar">Alterar Dados</string>

    <string name="nao_existe_layout">Não Existe layout escolhido!</string>
    <string name="ok">Ok</string>

    <string name="clique_botao">Cliquei no botão pela %1$dª vez</string>
    <string name="title_activity_desafio6_activity2">Desafio6Activity2</string>

    <string name="title_nome">Nome</string>
    <string name="title_password">Senha</string>
    <string name="title_email">Email</string>
    <string name="title_phone">Telefone</string>
    <string name="title_sex">Sexo</string>
    <string name="title_date">Data de Nascimento</string>

    <string name="editText_nome">Adicione o nome...</string>
    <string name="editText_email">Adicione o email...</string>
    <string name="editText_phone">Adicione o telefone...</string>

    <string name="male">Masculino</string>
    <string name="female">Feminino</string>

    <string name="cant_login">Usuário inexistente!</string>
    <string name="title_activity_desafio9">Desafio9</string>


</resources>
