<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="afpcsoft.com.br.desafiosdia1.CronomentroActivity">

    <LinearLayout
        android:id="@+id/layoutTerminou"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/terminou"
            android:textSize="70sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/fiveMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveMin"/>
        <Button
            android:id="@+id/tenMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenMin"/>
        <Button
            android:id="@+id/fithteenMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fithteenMin"/>
        <Button
            android:id="@+id/twentyMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyMin"/>
        <Button
            android:id="@+id/twentyFiveMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyFiveMin"/>
        <Button
            android:id="@+id/thirtyMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyMin"/>
    </LinearLayout>
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100dp"
        android:visibility="gone"/>

</LinearLayout>
